add M1 support and better run tasks